--- a/PayrollSystem/PayrollSystem.csproj
+++ b/PayrollSystem/PayrollSystem.csproj
@@ -25,4 +25,8 @@
     <Folder Include="wwwroot\images\employees\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
